<!--
  ~ Copyright 2020 Mehatab Shaikh.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Journal</string>
    <string name="search_entries">Search Entries</string>
    <string name="notebooks">Notebooks</string>
    <string name="notebook_id">notebook_id</string>
    <string name="note_id">note_id</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="theme">Theme</string>
    <string name="transition">Transition_%s</string>
    <string name="transition_name">transition_name</string>

    <string name="system">-1</string>
    <string name="edit">Edit</string>

    <string-array name="Themes">
        <item>Dark</item>
        <item>Light</item>
        <item>System</item>
        <item>Battery</item>
    </string-array>

    <string-array name="ThemesValues">
        <item>2</item>
        <item>1</item>
        <item>-1</item>
        <item>3</item>
    </string-array>


    <string name="cd_textformat_bold">Bold</string>
    <string name="cd_textformat_italic">Italic</string>
    <string name="cd_textformat_insert_link">Insert link</string>
    <string name="cd_textformat_insert_text_emoji">Insert text emoji</string>
    <string name="cd_textformat_strikethrough">Strikethrough</string>
    <string name="cd_textformat_quote">Quote</string>
    <string name="cd_textformat_superscript">Superscript</string>
    <string name="cd_textformat_code">Pre-formatted code</string>
    <string name="cd_textformat_header">Header</string>
    <string name="cd_textformat_thematic_header">Line break</string>
    <string name="cd_textformat_spoiler">Spoiler</string>
    <string name="composereply_redo">Redo</string>
    <string name="composereply_undo">Undo</string>
    <string name="cd_composereply_undo">Undo last change</string>
    <string name="cd_composereply_redo">Redo last change</string>

    <string name="composereply_addlink_error_empty_field">This can\'t be empty ಠ_ಠ</string>
    <string name="composereply_addlink_title">Title</string>
    <string name="composereply_addlink_url">URL</string>
    <string name="composereply_addlink_cancel">Cancel</string>
    <string name="composereply_addlink_insert">Insert</string>
    <string name="composereply_paste_from_clipboard_hint">Tap to paste URL from clipboard\n%s</string>

    <string name="guide">
"# Markdown guide
Press understands standard markdown syntaxes, including: **bold**, *italic*, ~~strikethrough~~, and many more:

### Code blocks
```
fun helloWorld() {
  println("""
    Code blocks are wrapped inside
    three ticks.
  """)
}
```

### Headings
Headings start with 1-6 `#` characters at the start of the line.

```
# Heading 1
## Heading 2
### Heading 3
#### Heading 4
##### Heading 5
###### Heading 6
```

### Links
Links use a set of square brackets (`[]`) for describing the link text, followed by regular parentheses (`()`) containing the URL.

[Rick and Morty](https://www.imdb.com/title/tt2861424/).

### Lists
Press supports ordered (numbered) and unordered (bulleted) lists. Unordered lists use asterisks, pluses, and hyphens — interchangeably — as list markers:

- National Treasure
+ Ghost Rider
* Face/Off

Ordered lists use numbers followed by periods:

1. The Last of Us
2. Death Stranding
3. Cyberpunk 2077

### Thematic breaks
Lines starting with three asterisks (`*`), hyphens (`-`) or underscores (`_`) are rendered as horizontal rules, a.k.a. “thematic breaks”.

---

### Quotes
> A paragraph starting with a `>` are rendered as a quote."
    </string>

    <string name="fab_transition">FabTransition</string>
    <string name="delete">Delete</string>
    <string name="delete_notebook">Are you sure you want to delete %s</string>
</resources>
