<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Mehatab Shaikh.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/composereply_bottombar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.HorizontalScrollView">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/textformattoolbar_insert_link"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_insert_link"
            android:src="@drawable/ic_link_24dp" />

        <ImageButton
            android:id="@+id/textformattoolbar_bold"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_bold"
            android:src="@drawable/ic_format_bold_24dp" />

        <ImageButton
            android:id="@+id/textformattoolbar_italic"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_italic"
            android:src="@drawable/ic_format_italic_24dp" />

        <ImageButton
            android:id="@+id/textformattoolbar_strikethrough"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_strikethrough"
            android:src="@drawable/ic_strikethrough_s_black_24dp" />

        <ImageButton
            android:id="@+id/textformattoolbar_inline_code"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_code"
            android:src="@drawable/ic_code_24dp" />

        <View style="@style/DankSeparator.HorizontalContent" />

        <ImageButton
            android:id="@+id/textformattoolbar_quote"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_quote"
            android:src="@drawable/ic_format_quote_24dp" />

        <ImageButton
            android:id="@+id/textformattoolbar_header"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_header"
            android:src="@drawable/ic_format_header_pound" />

        <View style="@style/DankSeparator.HorizontalContent" />

        <ImageButton
            android:id="@+id/textformattoolbar_thematic_break"
            style="@style/DankTextFormatToolbarButton"
            android:contentDescription="@string/cd_textformat_thematic_header"
            android:src="@drawable/ic_format_border_horizontal_24dp" />
    </LinearLayout>
</HorizontalScrollView>