<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Mehatab Shaikh.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="12dp">

    <EditText
        android:id="@+id/addlinkdialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginEnd="16dp"
        android:hint="@string/composereply_addlink_title"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/addlinkdialog_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:hint="@string/composereply_addlink_url"
        android:inputType="textUri"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:gravity="end">

        <Button
            android:id="@+id/addlinkdialog_cancel"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textStyle="bold"
            android:text="@string/composereply_addlink_cancel"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/addlinkdialog_insert"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/composereply_addlink_insert" />

    </LinearLayout>
</LinearLayout>