<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.journal.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/coordinator_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:elevation="0dp">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="0dp"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.appbar.MaterialToolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?actionBarSize"
                            app:layout_constraintTop_toTopOf="parent"
                            app:menu="@menu/home"
                            app:title="@string/app_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/notebooks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_80sdp"
                            android:text="@string/notebooks"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/toolbar" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/add_notebook"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_4sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/_4sdp"
                            android:scaleType="centerInside"
                            app:layout_constraintBottom_toBottomOf="@id/notebooks"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="@id/notebooks"
                            app:srcCompat="@drawable/ic_plus"
                            app:tint="?android:attr/textColorHint" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/books_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/_6sdp"
                            android:paddingTop="@dimen/_6sdp"
                            android:paddingRight="@dimen/_6sdp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintTop_toBottomOf="@id/notebooks" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:id="@+id/toolbar_collapsed_target"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_10sdp" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:overScrollMode="never"
                android:paddingTop="@dimen/_20sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/search_bg"
                android:drawableEnd="@drawable/ic_search"
                android:elevation="@dimen/_2sdp"
                android:hint="@string/search_entries"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:text="@={viewModel.query}"
                app:collapsedTarget="@id/toolbar_collapsed_target"
                app:layout_behavior=".common.CollapsingImageBehavior"
                app:layout_collapseMode="pin" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:backgroundTint="?colorAccent"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_plus"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>